# mpi_label_histo

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  label_visualizer.py  runtime_analysis.py
.github/workflows/: cmake.yml
app/: CMakeLists.txt  app.cpp
include/: arg_parser.hpp  histo_from_dir.hpp  histo_io.hpp  mpi_histo.hpp  mpi_histo_from_dir.hpp  print_directory.hpp  timer.hpp
src/: CMakeLists.txt  arg_parser_impl.cpp  histo_from_dir_impl.cpp  histo_io_impl.cpp  mpi_histo_from_dir_impl.cpp  mpi_histo_impl.cpp  print_directory_impl.cpp  timer_impl.cpp
